--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "NODE_ENV=test jest"
   },
   "author": "",
   "license": "ISC",
@@ -13,5 +13,10 @@
     "http-status": "^1.6.2",
     "mongodb": "^4.13.0",
     "socket.io": "^4.5.4"
+  },
+  "devDependencies": {
+    "jest": "^29.4.1",
+    "mongodb-memory-server": "^8.11.4",
+    "supertest": "^6.3.3"
   }
 }
